# choppy

./: .gitignore  README.md  choppy-app.nginx  fragment_annotator.py  homology_finder.py  pyproject.toml
choppy/: __init__.py  cli.py  fragment_annotator.py  homology_finder.py
data/: data_list.csv
sandbox/: annotator.py  saving_file.py  tries.py
sandbox/data/: S_cerevisiae-small.fa  lambda_genome-NC_001416.gb
server/: main.py
server/static/: index.html
tarnche/: __init__.py  cli.py  fragment_annotator.py  homology_finder.py
tests/: __init__.py  pMaM819-Double-marker-plasmid_fixedColEI-pMLPstar.gb  pSDL32-TAR_shuffle-pCC1-Gibson.gb  test_annotator.py  test_homology_finder.py
tests/data/: annotated.gb  test_extract_homology_regions.gb  test_file.csv  test_sequence.fa  test_sequences.gb
